clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__strlen_7.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/strlen-7.c" (c, x86_64-unknown-linux-gnu)
global b : rec_B = Zero { ty: Named("rec_B") } [external, default, align 1, dso_local]
global .str : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("foobar"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn strcpy(%arg0: s8i*, %arg1: s8i*) -> s8i* [external, c, nothrow];
fn init(%arg1: s8i*, %arg2: s8i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s8i*, %arg2: s8i*):
        %27 = alloca s8i*, "d", align 8
        %28 = alloca s8i*, "s", align 8
        store %arg1, %27
        store %arg2, %28
        %29 = load %27 : s8i*, align 8
        %30 = load %28 : s8i*, align 8
        %31 = call @strcpy(%29, %30) : s8i* [all]
        return
}
fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn strlen(%arg0: s8i*) -> u64i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn test_dynamic_type(%arg0: rec_A*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_A*):
        %9 = alloca rec_A*, "p", align 8
        %10 = alloca s8i*, "q", align 8
        store %arg0, %9
        %11 = load %9 : rec_A*, align 8
        get_member
        %13 = cast(array_to_ptrdecay) %12 : s8i*
        %14 = cast(bitcast) %13 : void*
        %15 = get_global @b : rec_B*
        %16 = cast(bitcast) %15 : void*
        %17 = const 12 : u64i
        %18 = call @memcpy(%14, %16, %17) : void* [all]
        %19 = cast(bitcast) %18 : s8i*
        store %19, %10, align 8
        %20 = load %10 : s8i*, align 8
        %21 = get_global @.str : s8i[7]*
        %22 = cast(array_to_ptrdecay) %21 : s8i*
        call @init(%20, %22) [all]
        scope {
                %23 = const 6 : u64i
                %24 = load %10 : s8i*, align 8
                %25 = call @strlen(%24) : u64i [all]
                cmp
                if %26 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_A*, "p", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 16 : u64i
        %4 = call @malloc(%3) : void* [all]
        %5 = cast(bitcast) %4 : rec_A*
        store %5, %1, align 8
        %6 = load %1 : rec_A*, align 8
        call @test_dynamic_type(%6) [all]
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
