clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_cpy_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-cpy-1.c" (c, x86_64-unknown-linux-gnu)
global pty : rec_tty_driver = Zero { ty: Named("rec_tty_driver") } [internal, default, align 8, dso_local]
global zero_t : rec_termios = Zero { ty: Named("rec_termios") } [internal, default, align 4, dso_local]

fn ini() -> void [external, c, no_inline, dso_local, nothrow] {
        %35 = get_global @pty : rec_tty_driver*
        get_member
        %37 = get_global @zero_t : rec_termios*
        copy
        %38 = const 1 : u32i
        %39 = get_global @pty : rec_tty_driver*
        get_member
        get_member
        store %38, %41, align 8
        %42 = const 2 : u32i
        %43 = get_global @pty : rec_tty_driver*
        get_member
        get_member
        store %42, %45, align 4
        %46 = const 3 : u32i
        %47 = get_global @pty : rec_tty_driver*
        get_member
        get_member
        store %46, %49, align 8
        %50 = const 4 : u32i
        %51 = get_global @pty : rec_tty_driver*
        get_member
        get_member
        store %50, %53, align 4
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        call @ini() [all]
        scope {
                %4 = get_global @pty : rec_tty_driver*
                get_member
                get_member
                %7 = load %6 : u32i, align 8
                %8 = const 1 : u32i
                cmp
                %10 = ternary %9 ? { : bool
                        %34 = const true : bool
                        yield %34
                } : {
                        %28 = get_global @pty : rec_tty_driver*
                        get_member
                        get_member
                        %31 = load %30 : u32i, align 4
                        %32 = const 2 : u32i
                        cmp
                        yield %33
                }
                %11 = ternary %10 ? { : bool
                        %27 = const true : bool
                        yield %27
                } : {
                        %21 = get_global @pty : rec_tty_driver*
                        get_member
                        get_member
                        %24 = load %23 : u32i, align 8
                        %25 = const 3 : u32i
                        cmp
                        yield %26
                }
                %12 = ternary %11 ? { : bool
                        %20 = const true : bool
                        yield %20
                } : {
                        %14 = get_global @pty : rec_tty_driver*
                        get_member
                        get_member
                        %17 = load %16 : u32i, align 4
                        %18 = const 4 : u32i
                        cmp
                        yield %19
                }
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
