clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ini_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ini-1.c" (c, x86_64-unknown-linux-gnu)
global object : rec_S = ConstRecord { ty: Named("rec_S"), members: Array([CirInt { ty: Named("s8i"), value: "88" }, ConstArray { ty: Array { element_type: Named("s32i"), size: 2 }, elts: Array([CirInt { ty: Named("s32i"), value: "8" }, CirInt { ty: Named("s32i"), value: "9" }]), trailing_zeros_num: 0 }]) } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = get_global @object : rec_S*
                get_member
                %7 = load %6 : s8i, align 4
                %8 = cast(integral) %7 : s32i
                %9 = const 88 : s32i
                cmp
                %11 = ternary %10 ? { : bool
                        %29 = const true : bool
                        yield %29
                } : {
                        %22 = const 0 : s64i
                        %23 = get_global @object : rec_S*
                        get_member
                        get_element
                        %26 = load %25 : s32i, align 4
                        %27 = const 8 : s32i
                        cmp
                        yield %28
                }
                %12 = ternary %11 ? { : bool
                        %21 = const true : bool
                        yield %21
                } : {
                        %14 = const 1 : s64i
                        %15 = get_global @object : rec_S*
                        get_member
                        get_element
                        %18 = load %17 : s32i, align 4
                        %19 = const 9 : s32i
                        cmp
                        yield %20
                }
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
