clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ini_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ini-2.c" (c, x86_64-unknown-linux-gnu)
global x : rec_anon2E0 = ConstRecord { ty: Named("rec_anon2E0"), members: Array([CirInt { ty: Named("u16i"), value: "17154" }, Zero { ty: Array { element_type: Named("u8i"), size: 2 } }]) } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %17 = get_global @x : rec_anon2E0*
                get_member
                get_bitfield
                %20 = const 2 : s32i
                cmp
                if %21 {
                        %22 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %11 = get_global @x : rec_anon2E0*
                get_member
                get_bitfield
                %14 = const 3 : s32i
                cmp
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %5 = get_global @x : rec_anon2E0*
                get_member
                get_bitfield
                %8 = const 4 : s32i
                cmp
                if %9 {
                        %10 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
