clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ini_3.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ini-3.c" (c, x86_64-unknown-linux-gnu)
global result : rec_anon2E0 = ConstRecord { ty: Named("rec_anon2E0"), members: Array([CirInt { ty: Named("u16i"), value: "4095" }, Zero { ty: Array { element_type: Named("u8i"), size: 2 } }]) } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = get_global @result : rec_anon2E0*
                get_member
                get_bitfield
                %8 = cast(integral) %7 : s32i
                %9 = const -8 : s32i
                and
                %11 = const 0 : s32i
                cmp
                %13 = ternary %12 ? { : bool
                        %23 = const true : bool
                        yield %23
                } : {
                        %15 = get_global @result : rec_anon2E0*
                        get_member
                        get_bitfield
                        %18 = cast(integral) %17 : s32i
                        %19 = const -8 : s32i
                        and
                        %21 = const 0 : s32i
                        cmp
                        yield %22
                }
                if %13 {
                        %14 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
