clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ini_4.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ini-4.c" (c, x86_64-unknown-linux-gnu)
global s : rec_s = ConstRecord { ty: Named("rec_s"), members: Array([Zero { ty: Array { element_type: Named("s32i"), size: 3 } }, ConstArray { ty: Array { element_type: Named("s32i"), size: 3 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "3" }]), trailing_zeros_num: 0 }]) } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = const 0 : s64i
                %6 = get_global @s : rec_s*
                get_member
                get_element
                %9 = load %8 : s32i, align 4
                %10 = const 1 : s32i
                cmp
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
