clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ret_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ret-1.c" (c, x86_64-unknown-linux-gnu)
global f.xr : rec_X = ConstRecord { ty: Named("rec_X"), members: Array([ConstArray { ty: Array { element_type: Named("s8i"), size: 33 }, elts: Str("return val"), trailing_zeros_num: 1 }, CirInt { ty: Named("s8i"), value: "82" }]) } [internal, default, align 1, dso_local]
global c1 : s8i = CirInt { ty: Named("s8i"), value: "97" } [external, default, align 1, dso_local]
global c2 : s8i = CirInt { ty: Named("s8i"), value: "127" } [external, default, align 1, dso_local]
global c3 : s8i = CirInt { ty: Named("s8i"), value: "-128" } [external, default, align 1, dso_local]
global c4 : s8i = CirInt { ty: Named("s8i"), value: "-1" } [external, default, align 1, dso_local]
global c5 : s8i = CirInt { ty: Named("s8i"), value: "-1" } [external, default, align 1, dso_local]
global d1 : double = CirFloat { ty: Double, value: "1.000000e-01" } [external, default, align 8, dso_local]
global d2 : double = CirFloat { ty: Double, value: "2.000000e-01" } [external, default, align 8, dso_local]
global d3 : double = CirFloat { ty: Double, value: "3.000000e-01" } [external, default, align 8, dso_local]
global d4 : double = CirFloat { ty: Double, value: "4.000000e-01" } [external, default, align 8, dso_local]
global d5 : double = CirFloat { ty: Double, value: "5.000000e-01" } [external, default, align 8, dso_local]
global d6 : double = CirFloat { ty: Double, value: "6.000000e-01" } [external, default, align 8, dso_local]
global d7 : double = CirFloat { ty: Double, value: "0.69999999999999996" } [external, default, align 8, dso_local]
global d8 : double = CirFloat { ty: Double, value: "8.000000e-01" } [external, default, align 8, dso_local]
global d9 : double = CirFloat { ty: Double, value: "9.000000e-01" } [external, default, align 8, dso_local]
global B1 : rec_B = ConstRecord { ty: Named("rec_B"), members: Array([CirFloat { ty: Double, value: "1.000000e-01" }, ConstArray { ty: Array { element_type: Named("s32i"), size: 3 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "3" }]), trailing_zeros_num: 0 }]) } [external, default, align 8, dso_local]
global B2 : rec_B = ConstRecord { ty: Named("rec_B"), members: Array([CirFloat { ty: Double, value: "2.000000e-01" }, ConstArray { ty: Array { element_type: Named("s32i"), size: 3 }, elts: Array([CirInt { ty: Named("s32i"), value: "5" }, CirInt { ty: Named("s32i"), value: "4" }, CirInt { ty: Named("s32i"), value: "3" }]), trailing_zeros_num: 0 }]) } [external, default, align 8, dso_local]
global X1 : rec_X = ConstRecord { ty: Named("rec_X"), members: Array([ConstArray { ty: Array { element_type: Named("s8i"), size: 33 }, elts: Str("abcdefghijklmnopqrstuvwxyzABCDEF"), trailing_zeros_num: 1 }, CirInt { ty: Named("s8i"), value: "71" }]) } [external, default, align 1, dso_local]
global X2 : rec_X = ConstRecord { ty: Named("rec_X"), members: Array([ConstArray { ty: Array { element_type: Named("s8i"), size: 33 }, elts: Str("123"), trailing_zeros_num: 1 }, CirInt { ty: Named("s8i"), value: "57" }]) } [external, default, align 1, dso_local]
global X3 : rec_X = ConstRecord { ty: Named("rec_X"), members: Array([ConstArray { ty: Array { element_type: Named("s8i"), size: 33 }, elts: Str("return-return-return"), trailing_zeros_num: 1 }, CirInt { ty: Named("s8i"), value: "82" }]) } [external, default, align 1, dso_local]
global out : s8i[100] = Zero { ty: Array { element_type: Named("s8i"), size: 100 } } [external, default, align 16, dso_local]
global .str : s8i[63] = ConstArray { ty: Array { element_type: Named("s8i"), size: 63 }, elts: Str("X f(B,char,double,B):({%g,{%d,%d,%d}},'%c',%g,{%g,{%d,%d,%d}})"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global fp : (rec_B, s8i, double, rec_B) -> rec_X* = GlobalView { ty: Pointer { pointee: Func { inputs: [Named("rec_B"), Named("s8i"), Double, Named("rec_B")], optional_return_type: Some(Named("rec_X")), var_arg: false }, addr_space: None }, symbol: "f", indices: None } [external, default, align 8, dso_local]

fn sprintf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn f(%arg0: rec_X*, %arg1: rec_B*, %arg2: s8i, %arg3: double, %arg4: rec_B*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_X*, %arg1: rec_B*, %arg2: s8i, %arg3: double, %arg4: rec_B*):
        %47 = load %arg4 : rec_B
        %48 = load %arg1 : rec_B
        %49 = alloca rec_B, "a", align 8
        %50 = alloca s8i, "b", align 1
        %51 = alloca double, "c", align 8
        %52 = alloca rec_B, "d", align 8
        store %48, %49
        store %arg2, %50
        store %arg3, %51
        store %47, %52
        %53 = get_global @f.xr : rec_X*
        copy
        %54 = load %50 : s8i, align 1
        get_member
        store %54, %55, align 1
        %56 = get_global @sprintf : (s8i*, s8i*, ...) -> s32i*
        %57 = get_global @out : s8i[100]*
        %58 = cast(array_to_ptrdecay) %57 : s8i*
        %59 = get_global @.str : s8i[63]*
        %60 = cast(array_to_ptrdecay) %59 : s8i*
        get_member
        %62 = load %61 : double, align 8
        %63 = const 0 : s64i
        get_member
        get_element
        %66 = load %65 : s32i, align 8
        %67 = const 1 : s64i
        get_member
        get_element
        %70 = load %69 : s32i, align 4
        %71 = const 2 : s64i
        get_member
        get_element
        %74 = load %73 : s32i, align 8
        %75 = load %50 : s8i, align 1
        %76 = cast(integral) %75 : s32i
        %77 = load %51 : double, align 8
        get_member
        %79 = load %78 : double, align 8
        %80 = const 0 : s64i
        get_member
        get_element
        %83 = load %82 : s32i, align 8
        %84 = const 1 : s64i
        get_member
        get_element
        %87 = load %86 : s32i, align 4
        %88 = const 2 : s64i
        get_member
        get_element
        %91 = load %90 : s32i, align 8
        %92 = call @sprintf(%58, %60, %62, %66, %70, %74, %76, %77, %79, %83, %87, %91) : s32i [all]
        return
}
fn strcpy(%arg0: s8i*, %arg1: s8i*) -> s8i* [external, c, nothrow];
fn strcmp(%arg0: s8i*, %arg1: s8i*) -> s32i [external, c, pure, nothrow];
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_X, "Xr", align 1
        %2 = alloca s8i[100], "tmp", align 16
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @B1 : rec_B*
        %5 = get_global @c2 : s8i*
        %6 = load %5 : s8i, align 1
        %7 = get_global @d3 : double*
        %8 = load %7 : double, align 8
        %9 = get_global @B2 : rec_B*
        %10 = load %4 : rec_B, align 8
        %11 = load %9 : rec_B, align 8
        %12 = alloca rec_B, "byval", align 8
        store %10, %12
        %13 = alloca rec_B, "byval", align 8
        store %11, %13
        call @f(%1, %12, %6, %8, %13) [all]
        %14 = get_global @strcpy : (s8i*, s8i*) -> s8i**
        %15 = cast(array_to_ptrdecay) %2 : s8i*
        %16 = get_global @out : s8i[100]*
        %17 = cast(array_to_ptrdecay) %16 : s8i*
        %18 = call @strcpy(%15, %17) : s8i* [all]
        %19 = const 0 : s8i
        get_member
        store %19, %20, align 1
        %21 = const 0 : s64i
        get_member
        get_element
        store %19, %23, align 1
        %24 = get_global @fp : (rec_B, s8i, double, rec_B) -> rec_X**
        %25 = load %24 : (rec_B, s8i, double, rec_B) -> rec_X*, align 8
        %26 = get_global @B1 : rec_B*
        %27 = get_global @c2 : s8i*
        %28 = load %27 : s8i, align 1
        %29 = get_global @d3 : double*
        %30 = load %29 : double, align 8
        %31 = get_global @B2 : rec_B*
        %32 = load %26 : rec_B, align 8
        %33 = load %31 : rec_B, align 8
        %34 = alloca rec_B, "byval", align 8
        store %32, %34
        %35 = alloca rec_B, "byval", align 8
        store %33, %35
        %36 = cast(bitcast) %25 : (rec_X*, rec_B*, s8i, double, rec_B*) -> void*
        call (%1, %34, %28, %30, %35) [all]
        scope {
                %40 = get_global @strcmp : (s8i*, s8i*) -> s32i*
                %41 = cast(array_to_ptrdecay) %2 : s8i*
                %42 = get_global @out : s8i[100]*
                %43 = cast(array_to_ptrdecay) %42 : s8i*
                %44 = call @strcmp(%41, %43) : s32i [pure]
                %45 = cast(int_to_bool) %44 : bool
                if %45 {
                        %46 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %37 = get_global @exit : (s32i) -> void*
        %38 = const 0 : s32i
        call @exit(%38) [all]
        %39 = load %0 : s32i
        return %39
}
