clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__struct_ret_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/struct-ret-2.c" (c, x86_64-unknown-linux-gnu)
fn f() -> u8i [external, c, no_inline, dso_local, nothrow] {
        %26 = alloca u8i, "__retval", align 1
        %27 = const 171 : u8i
        store %27, %26
        %28 = load %26 : u8i
        return %28
}
fn g() -> u16i [external, c, no_inline, dso_local, nothrow] {
        %23 = alloca u16i, "__retval", align 2
        %24 = const 4660 : u16i
        store %24, %23
        %25 = load %23 : u16i
        return %25
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_three_byte_t, "three_byte", align 1
        %2 = const 0 : s32i
        store %2, %0
        %3 = call @f() : u8i [all]
        get_member
        store %3, %4, align 1
        %5 = call @g() : u16i [all]
        get_member
        store %5, %6, align 1
        scope {
                get_member
                %11 = load %10 : u8i, align 1
                %12 = cast(integral) %11 : s32i
                %13 = const 171 : s32i
                cmp
                %15 = ternary %14 ? { : bool
                        %22 = const true : bool
                        yield %22
                } : {
                        get_member
                        %18 = load %17 : u16i, align 1
                        %19 = cast(integral) %18 : s32i
                        %20 = const 4660 : s32i
                        cmp
                        yield %21
                }
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %7 = get_global @exit : (s32i) -> void*
        %8 = const 0 : s32i
        call @exit(%8) [all]
        %9 = load %0 : s32i
        return %9
}
